# ana-online-judge

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_PLAN.md  Makefile  PERSONAL_PAIN_POINT.md  PLAN2.md  PLAN3.md  PLAN4.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.husky/: pre-commit  pre-push
cli/: README.md  package.json  translate-characters.example.txt
judge/: .dockerignore  Cargo.toml  Dockerfile  entrypoint.sh
judge/files/: aoj-cs-compile  languages.toml
judge/files/csharp-template/: Main.csproj
judge/src/: anigma.rs  checker.rs  executer.rs  judger.rs  languages.rs  main.rs  redis_manager.rs  sandbox.rs  storage.rs  validator.rs
judge/src/compiler/: mod.rs
judge/src/components/: checker.rs
judge/src/core/: languages.rs  mod.rs  utils.rs  verdict.rs
judge/src/engine/: executer.rs  mod.rs
judge/src/engine/compiler/: include_flags.rs  mod.rs
judge/src/engine/sandbox/: config.rs  isolate_box.rs  meta.rs  mod.rs
judge/src/infra/: mod.rs  redis_manager.rs  storage.rs  storage_proxy.rs
judge/src/jobs/: anigma.rs  judger.rs  mod.rs  subtask.rs  validator.rs
judge/src/jobs/playground/: mod.rs
judge/src/jobs/workshop/: compile_cache.rs  generate.rs  invoke.rs  mod.rs  validate.rs
judge/src/playground/: mod.rs
judge/src/runner/: mod.rs  sandboxed.rs  trusted.rs
judge/src/sandbox/: config.rs  isolate_box.rs  meta.rs  mod.rs
scripts/: reset.sh
test-codes/: 01_fork_bomb.c  02_read_passwd.c  03_memory_bomb.c  04_network_attack.c  05_system_exec.c  06_disk_fill.c  README.md  (+16 more)
(+609 files in other folders)
